--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "npx serve -s"
+  },
   "devDependencies": {
     "cypress": "^13.9.0",
     "tailwindcss": "^3.4.3"
