--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "devDependencies": {
     "cypress": "^13.9.0",
+    "node-sass": "^9.0.0",
     "tailwindcss": "^3.4.3"
   },
   "dependencies": {
