--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "npx serve -s"
+    "start": "npx serve -s &"
   },
   "devDependencies": {
     "cypress": "^13.9.0",
