--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -28,7 +28,9 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'src/dist'  # Especificamos que solo se debe cargar el contenido de la carpeta 'src/dist'
+            path: |
+              src/dist
+              src/assets
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
