--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -25,6 +25,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
+      - name: Verify directory contents
+        run: ls -l
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
