--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -25,14 +25,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
-      - name: Verify directory contents
-        run: ls -l
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: |
-            src/dist
-            src/assets
+          path: 'src/dist'  # Especificamos que solo se debe cargar el contenido de la carpeta 'src/dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
