--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,17 @@
 {
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "cSpell.words": [
+        "agencia",
+        "ancora",
+        "cargar",
+        "datos",
+        "Desde",
+        "encontró",
+        "entrada",
+        "fachada",
+        "formacion",
+        "inicios",
+        "webm",
+        "zona"
+    ]
 }
