--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,11 +6,15 @@
         "cargar",
         "datos",
         "Desde",
+        "Empleo",
         "encontró",
         "entrada",
         "fachada",
         "formacion",
         "inicios",
+        "mejora",
+        "ningún",
+        "objeto",
         "webm",
         "zona"
     ]
