--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,23 @@
 {
     "rewrites": [
-      { "source": "/(.*)", "destination": "/$1.html" }
+      { "source": "/index", "destination": "/dist/index.html" },
+      { "source": "/entrada", "destination": "/dist/entrada.html" },
+      { "source": "/agencia", "destination": "/dist/agencia.html" },
+      { "source": "/intermediacion", "destination": "/dist/intermediacion.html" },
+      { "source": "/salta", "destination": "/dist/salta.html" },
+      { "source": "/talento", "destination": "/dist/talento.html" },
+      { "source": "/formacion", "destination": "/dist/formacion.html" },
+      { "source": "/avatar", "destination": "/dist/avatar.html" }
+    ],
+    "redirects": [
+      { "source": "/salta.html", "destination": "/salta", "statusCode": 301 },
+      { "source": "/index.html", "destination": "/index", "statusCode": 301 },
+      { "source": "/entrada.html", "destination": "/entrada", "statusCode": 301 },
+      { "source": "/agencia.html", "destination": "/agencia", "statusCode": 301 },
+      { "source": "/intermediacion.html", "destination": "/intermediacion", "statusCode": 301 },
+      { "source": "/talento.html", "destination": "/talento", "statusCode": 301 },
+      { "source": "/formacion.html", "destination": "/formacion", "statusCode": 301 },
+      { "source": "/avatar.html", "destination": "/avatar", "statusCode": 301 }
     ]
   }
   
