--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,27 @@
 {
     "cSpell.words": [
+        "actualizado",
+        "actualizar",
+        "ADMINISTRADOR",
         "Agencia",
         "Ancora",
+        "Bienvenido",
+        "correctamente",
+        "DESCRIPCION",
+        "desea",
+        "Empleo",
+        "Entrada",
+        "Enviar",
+        "escena",
+        "Escenas",
+        "Está",
         "Formacion",
+        "formulario",
         "Intermediacion",
+        "seguro",
+        "Seleccione",
+        "Talento",
+        "TITULO",
         "videosphere"
     ]
 }
